[metadata]
name = aiodropbox
url = https://aiodropbox.org
download_url = https://github.com/aiodropbox/aiodropbox
license = MIT
license_file = LICENSE
description = tui application to create concat commands for ffmpeg
long_description = file: README.md
long_description_content_type = text/markdown
author = aiodropbox team
author_email = bossjones@theblacktonystark.com
classifiers =
    Development Status :: 3 - Alpha
    Environment :: X11 Applications :: Qt
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT
    Programming Language :: C
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Utilities
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS

# ------------------------------------------ ultron8 -----------------------------
# SOURCE: https://github.com/MartinHeinz/python-project-blueprint/blob/master/setup.cfg
[build_docs]
source-dir = docs/
build-dir  = docs/_build
all_files  = 1

[upload_docs]
upload-dir = docs/_build/html

[bumpversion]
current_version = 0.1.0
commit = True
tag = True
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(-(?P<stage>[^.]*)\.(?P<devnum>\d+))?
serialize =
    {major}.{minor}.{patch}-{stage}.{devnum}
    {major}.{minor}.{patch}

[bumpversion:part:stage]
optional_value = stable
first_value = stable
values =
	alpha
	beta
	stable

[bumpversion:part:devnum]

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:aiodropbox/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[wheel]
universal = 1

[bdist_wheel]
universal = 1

[flake8]
# it's not a bug that we aren't using all of hacking, ignore:
# F812: list comprehension redefines ...
# H101: Use TODO(NAME)
# H202: assertRaises Exception too broad
# H233: Python 3.x incompatible use of print operator
# H301: one import per line
# H306: imports not in alphabetical order (time, os)
# H401: docstring should not start with a space
# H403: multi line docstrings should end on a new line
# H404: multi line docstring should start without a leading new line
# H405: multi line docstring summary not separated with an empty line
# H501: Do not use self.__dict__ for string formatting
# F401: imported but unused
# W604 backticks are deprecated, use 'repr()'
# F811 redefinition of unused 'mocker' from line 13
# F841 local variable 'mock_datadog_initialize' is assigned to but never used
# ignore the most ridiculous test added in v3.5.0
# (E741: do not use variables named 'l', 'O', or 'I'
ignore =
    E741
    F812
    H101
    H202
    H233
    H301
    H306
    H401
    H403
    H404
    H405
    H501
    F401
    W604
    F811
    F841
    E302
    E401
    E501
    E265
    E713
    E402
    D204
    D102
    D400
    D205
    D202
    D103
    D209
    D105
    D101
    D401
    D200
    E127
    D100
    E241
    E704
    E251
    W503
    W504
    E722
    W605
    W1203


exclude =
    # No need to traverse our git directory
    .git,
    # There's no value in checking cache directories
    __pycache__,
    # The conf file is mostly autogenerated, ignore it
    docs/source/conf.py,
    # The old directory contains Flake8 2.0
    old,
    # This contains our built documentation
    build,
    # This contains builds of flake8 that we don't want to check
    dist,
    .svn,
    CVS,
    .bzr,
    .hg,
    .tox,
    docs,
    virtualenv_run,
    tests/*.,
    aiodropbox_venv*,
    aiodropbox_venv*/*
    .venv,
    www_static,
    venv,
    bin,
    lib,
    deps,
    tests/fixtures/simple/packs/linux/actions/checks,
    .eggs,
    stubs/*
max-line-length = 200
# max-complexity: which will emit a warning if the McCabe complexity of a function is higher than the value. By default it's deactivated.
max-complexity = 12

# [pep8]
# ignore = E741,F812,H101,H202,H233,H301,H306,H401,H403,H404,H405,H501,F401,W604,F811,F841,E302,E401,E501,E265,E713,E402,D204,D102,D400,D205,D202,D103,D209,D105,D101,D401,D200,E127,D100,E241,E704,E251,W503,W504,E722,W605
# max-line-length = 200
# max-complexity = 12

# W505 doc line too long (113 > 72 characters)
[pycodestyle]
select =
ignore = E741,F812,H101,H202,H233,H301,H306,H401,H403,H404,H405,H501,F401,W604,F811,F841,E302,E401,E501,E265,E713,E402,D204,D102,D400,D205,D202,D103,D209,D105,D101,D401,D200,E127,D100,E241,E704,E251,W503,W504,E722,W605,W505
max_line_length = 200
max_doc_length = 72

# EXAMPLE: https://docs.pytest.org/en/latest/goodpractices.html
[tool:pytest]
filterwarnings = error
env =
    SECRET_KEY=secret
timeout = 60
testpaths = tests
norecursedirs =
    .git
    testing_config
    dist
    build
    .tox
    tests/fixtures/simple/packs/linux/actions/checks
# --cov-append

# SOURCE: https://github.com/aio-libs/aioredis/blob/master/setup.cfg
markers =
    run_loop: Mark coroutine to be run with asyncio loop.
    redis_version(*version, reason): Mark test expecting minimum Redis version
    skip(reason): Skip test
    mypy: marks tests dealing with mypy (deselect with '-m "not mypy"')
    usersonly: marks tests dealing with users (deselect with '-m "not usersonly"')
    loginonly: marks tests dealing with login (deselect with '-m "not loginonly"')
    actiononly: marks tests dealing with action (deselect with '-m "not actiononly"')
    unittest: marks tests dealing with unittest (deselect with '-m "not unittest"')
    integration: marks tests dealing with integration testing (deselect with '-m "not integration"')
    packsonly: marks tests dealing with packs (deselect with '-m "not packsonly"')
    sensorsonly: marks tests dealing with sensors (deselect with '-m "not sensorsonly"')
    triggeronly: marks tests dealing with trigger (deselect with '-m "not triggeronly"')
    youtubeonly: marks tests dealing with youtube (deselect with '-m "not youtubeonly"')
    csvonly: marks tests dealing with csv (deselect with '-m "not csvonly"')
    fulltextsearchonly: marks tests dealing with full text search (deselect with '-m "not fulltextsearchonly"')
    triggerinstanceonly: marks tests dealing with triggerinstance (deselect with '-m "not triggerinstanceonly"')
    triggertypeonly: marks tests dealing with triggertype (deselect with '-m "not triggertypeonly"')
    configonly: marks tests dealing with configs (deselect with '-m "not configonly"')
    txtonly: marks tests dealing with txt (deselect with '-m "not txtonly"')
    smartonly: marks tests dealing with smart configs (deselect with '-m "not smartonly"')
    baseconfigonly: marks tests dealing with baseconfigs (deselect with '-m "not baseconfigonly"')
    settingsonly: marks tests dealing with settings (deselect with '-m "not settingsonly"')
    workspaceonly: marks tests dealing with workspace (deselect with '-m "not workspaceonly"')
    clientonly: marks tests dealing with client (deselect with '-m "not clientonly"')
    dbonly: marks tests dealing with db (deselect with '-m "not dbonly"')
    pathsonly: marks tests dealing with paths module (deselect with '-m "not pathsonly"')
    fastapionly: marks tests dealing with fastapi (deselect with '-m "not fastapionly"')
    constantsonly: marks tests dealing with constants (deselect with '-m "not constantsonly"')
    jwtonly: marks tests dealing with jwt (deselect with '-m "not jwtonly"')
    jsononly: marks tests dealing with json (deselect with '-m "not jsononly"')
    utilsonly: marks tests dealing with utils (deselect with '-m "not utilsonly"')
    clionly: marks tests dealing with cli (deselect with '-m "not clionly"')
    itemonly: marks tests dealing with items (deselect with '-m "not itemonly"')
    loggeronly: marks tests dealing with loggers (deselect with '-m "not loggeronly"')
    datainconsistent: marks tests dealing with inconsistencies between the apis data and the db itself via the crud functions (deselect with '-m "not datainconsistent"')
    needsisolatedfilesystem: marks tests dealing that need to be using an isolated filesystem (deselect with '-m "not needsisolatedfilesystem"')
    mockedfs: marks tests dealing that need to be using an isolated filesystem (deselect with '-m "not mockedfs"')
    convertingtotestclientstarlette: marks tests that are in the process of being converted to use TestClient (deselect with '-m "not convertingtotestclientstarlette"')
addopts =  --cov-append --cov=aiodropbox --cov-report term-missing --cov-report xml:cov.xml --cov-report html:htmlcov --cov-report annotate:cov_annotate --mypy --showlocals --tb=short
####################################################################################
# source: https://github.com/pytest-dev/pytest-mock
# Python 3 users might want to use a newest version of the mock package as
# published on PyPI than the one that comes with the Python distribution.
# This will force the plugin to import mock instead of the unittest.mock
# module bundled with Python 3.3+. Note that this option is only used in
# Python 3+, as Python 2 users only have the option to use the mock package from PyPI anyway.
mock_use_standalone_module = False
# FOLLOW UP INFO. It's possible that we want to be using unittest.mock instead of
# mock available from pypi which seems to have regressions
# via: https://github.com/pytest-dev/pytest-mock/blob/9d221d5bc53dd0cfddbe775a1595f72d029b9ece/CHANGELOG.rst
# New configuration variable, mock_use_standalone_module (defaults to False).
# This forces the plugin to import mock instead of unittest.mock on Python 3.
# This is useful to import a newer version than the one available in the Python distribution.
#
# Previously the plugin would first try to import mock and fallback to unittest.mock
# in case of an ImportError, but this behavior has been removed because it could
# hide hard to debug import errors (#68).
#
# Now mock (Python 2) and unittest.mock (Python 3) are lazy-loaded to make it
# possible to implement the new mock_use_standlone_module configuration option.
# As a consequence of this the undocumented pytest_mock.mock_module variable,
# which pointed to the actual mock module being used by the plugin, has been removed.
#
# DEFAULT is now available from the mocker fixture.
####################################################################################

[isort]
# https://github.com/timothycrosley/isort
# https://github.com/timothycrosley/isort/wiki/isort-Settings
# https://github.com/home-assistant/core/blob/dev/setup.cfg
# splits long import on multiple lines indented by 4 spaces
# An integer that represents how you want imports to be displayed if they're long enough to span multiple lines. A full definition of all possible modes can be found here(https://github.com/timothycrosley/isort#multi-line-output-modes).
# NOTE: 3 means Vertical Hanging Indent
multi_line_output = 3
indent = "    "
# by default isort don't check module indexes
# not_skip = __init__.py
# will group `import x` and `from x import` of the same module.
force_sort_within_sections = true
# typing is stdlib on py35 but 3rd party on py34, let it hang in between
known_inbetweens = typing
sections = FUTURE,STDLIB,INBETWEENS,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
# Will set isort to automatically add a trailing comma to the end of from imports.
include_trailing_comma = True
#  Force from imports to be grid wrapped regardless of line length, where the value given is the number of imports allowed before wrapping occurs.
force_grid_wrap = 0
# If set to true - isort will combine as imports on the same line within for import statements. By default isort forces all as imports to display on their own lines.
combine_as_imports = True
# An integer that represents the longest line-length you want a single import to take. Defaults to 79.
line_length = 88
# The default section to place imports in, if their section can not be automatically determined. FIRSTPARTY, THIRDPARTY, etc.
default_section = THIRDPARTY
# A list of imports that will be forced to display within the first party category.
known_first_party = aiodropbox,tests
# A list of modules that you want to appear in their own separate section. NOTE: This does not work with custom organized sections. For that use known_{section} instead.
forced_separate = tests


# for reformatting code with yapf
[yapf]
# source: https://github.com/google/brotli/blob/606a70b77926a47769fd885584800a33a079861a/setup.cfg
based_on_style=google
# BLANK_LINE_BEFORE_NESTED_CLASS_OR_DEF=True
# COLUMN_LIMIT=95
# DEDENT_CLOSING_BRACKETS=True
# SPACE_BETWEEN_ENDING_COMMA_AND_CLOSING_BRACKET=False

# ---------------------------- FROM TEDI -----------------------------------------------
[aliases]
test=pytest
dists = sdist bdist_wheel

# [tool:pytest]
# addopts = --verbose --cov --cov-report term --cov-report html --flake8 --mypy

# SOURCE: https://github.com/pyscaffold/pyscaffold/blob/master/setup.cfg
[test]
# py.test options when running `python setup.py test`
addopts = --verbose
extras = True


# Coverage.py is a tool for measuring code coverage of Python programs.
# for more info: https://coverage.readthedocs.io/en/coverage-4.4.1/config.html
# https://coverage.readthedocs.io/en/latest/config.html
[coverage:run]
source = aiodropbox
omit =
    aiodropbox/pkg/*
    aiodropbox/docs/*
    aiodropbox/tests/*
    /etc/python3.6/sitecustomize.py
    venv/**
    aiodropbox/tests/**
    .eggs/**
    /home/travis/virtualenv/**
    tests/fixtures/simple/packs/linux/actions/checks/**

# # Run in parallel mode so that coverage can canonicalize the source paths
# # regardless of whether it runs locally or within a Docker container.
# parallel = True
# https://coverage.readthedocs.io/en/latest/branch.html
# In addition to the usual statement coverage, coverage.py also supports branch coverage measurement. Where a line in your program could jump to more than one next line, coverage.py tracks which of those destinations are actually visited, and flags lines that haven't visited all of their possible destinations.
# branch = true
# source = aioredis,tests

[coverage:report]
# Regexes for lines to exclude from consideration
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    # Don't complain about missing debug-only code:
    def __repr__
    if self\.debug

    # Don't complain if tests don't hit defensive assertion code:
    raise AssertionError
    raise NotImplementedError

    # Don't complain if non-runnable code isn't run:
    if 0:
    if __name__ == .__main__.:

# omit =
#     */migrations/*
#     .eggs/*
#     test/*
#     */site-packages/*
#     */distutils/*
#     setup.py

# https://coverage.readthedocs.io/en/coverage-4.3.1/config.html#paths
[coverage:paths]
# SOURCE: https://github.com/mtlynch/ingredient-phrase-tagger/blob/master/.coveragerc
# the first path is the path on the local filesystem
# the second path is the path as it appears within the Docker container
source =
    aiodropbox/
    /home/developer/app/aiodropbox

# [coverage:html]
# html_dir = htmlcov

# [coverage:xml]
# xml_output = cov.xml


# [flake8]
# max_line_length = 120

# ---------------------------- FROM TEDI -----------------------------------------------

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats =
    sdist
    bdist_wheel


# ------------------------------------------ ultron8 -----------------------------


[mypy]
# plugins = pydantic.mypy, sqlmypy
plugins = pydantic.mypy

# Enables or disables strict Optional checks. If False, mypy treats None as compatible with every type.
strict_optional = True
# Warns about casting an expression to its inferred type.
warn_redundant_casts = True
# warn_unused_ignores = True
# Disallows usage of generic types that do not specify explicit type parameters.
disallow_any_generics = True
# Type-checks the interior of functions without type annotations.
check_untyped_defs = True

# Disallows defining functions without type annotations or with incomplete type annotations.
disallow_untyped_defs = True
# Suppresses error messages about imports that cannot be resolved.
ignore_missing_imports = True

# mypy_path = stubs
# exclude = "tests/__init__.py"

[pydantic-mypy]
init_forbid_extra = True
init_typed = True
warn_required_dynamic_aliases = True
warn_untyped_fields = True

[mypy-loguru]
ignore_missing_imports = True

[mypy-asyncpg.*]
ignore_missing_imports = True

[mypy-bcrypt]
ignore_missing_imports = True

[mypy-passlib.*]
ignore_missing_imports = True

[mypy-slugify.*]
ignore_missing_imports = True

[mypy-pypika.*]
ignore_missing_imports = True

[mypy-pytest.*]
ignore_missing_imports = True

[mypy-alembic.*]
ignore_missing_imports = True

[mypy-docker.*]
ignore_missing_imports = True

[mypy-httpx.*]
# TODO: Fix this, but using it like so for the moment
# https://github.com/encode/httpx/blob/master/setup.cfg
disallow_untyped_defs = True
ignore_missing_imports = True

[mypy-tests.conftest]
# FIXME: Till we fix the following, need to ignore errors.
# tests/conftest.py:88: error: Missing type parameters for generic type "AsyncGenerator"
# tests/conftest.py:102: error: "AsyncGenerator" expects 2 type arguments, but 1 given
# tests/conftest.py:113: error: "AsyncGenerator" expects 2 type arguments, but 1 given
ignore_missing_imports = True
ignore_errors = True

[mypy-tests.testing_helpers]
# FIXME: Till we fix the following, need to ignore errors.
# tests/testing_helpers.py:11: error: Missing type parameters for generic type "Callable"
# tests/testing_helpers.py:12: error: Missing type parameters for generic type "Callable"
ignore_missing_imports = True
ignore_errors = True

[freezegun.*]
# FIXME: Till we fix the following, need to ignore errors.
# tests/testing_helpers.py:11: error: Missing type parameters for generic type "Callable"
# tests/testing_helpers.py:12: error: Missing type parameters for generic type "Callable"
ignore_missing_imports = True
ignore_errors = True

[mypy-tests.test_api.test_routes.test_articles]
# FIXME: Till we fix the following, need to ignore errors.
# tests/test_api/test_routes/test_articles.py:105: error: Implicit generic "Any". Use "typing.Dict" and specify generic parameters
ignore_missing_imports = True
ignore_errors = True

# [mypy-sqlalchemy.*]
# ignore_missing_imports = True
#
# [mypy-sqlalchemy_wrapper.*]
# ignore_missing_imports = True

# NOTE: We can disable this when we move to psycopg3
# SOURCE: https://github.com/psycopg/psycopg2/issues/977
[mypy-psycopg2.*]
ignore_missing_imports = True

# [isort]
# multi_line_output = 3
# include_trailing_comma = True
# line_length = 88
# force_grid_wrap = 0
# combine_as_imports = True

# [flake8]
# format = wemake
# max-line-length = 88
# per-file-ignores =
#     # ignore error on builtin names for TypedTable classes, since just mapper for SQL table
#     app/db/queries/tables.py: WPS125,

#     # ignore black disabling in some places for queries building using pypika
#     app/db/repositories/*.py: E800,
# ignore =
#     # common errors:
#     # FastAPI architecture requires a lot of functions calls as default arguments, so ignore it here.
#     B008,
#     # docs are missing in this project.
#     D, RST

#     # WPS: 3xx
#     # IMO, but the obligation to specify the base class is redundant.
#     WPS306,

#     # WPS: 4xx
#     # FastAPI architecture requires a lot of complex calls as default arguments, so ignore it here.
#     WPS404,
#     # again, FastAPI DI architecture involves a lot of nested functions as DI providers.
#     WPS430,

#     # WPS: 6xx
#     # pydantic defines models in dataclasses model style, but not supported by WPS.
#     WPS601,
# no-accept-encodings = True
# nested-classes-whitelist=Config
# inline-quotes = "
